Add landscape support

--- a/app/src/main/res/layout-land/include_cta.xml
+++ b/app/src/main/res/layout-land/include_cta.xml
@@ -30,8 +30,20 @@
     <include
         android:id="@+id/ctaContent"
         layout="@layout/include_cta_content"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="18dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/centerGuideline"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/centerGuideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
 
     <include
         layout="@layout/include_cta_buttons"
@@ -39,7 +51,6 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ctaContent" />
+        app:layout_constraintStart_toEndOf="@id/centerGuideline" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
