Add rotation support

--- a/app/src/main/res/layout/include_cta.xml
+++ b/app/src/main/res/layout/include_cta.xml
@@ -18,8 +18,8 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/ctaContainer"
-    android:layout_width="0dp"
+    android:layout_width="match_parent"
+    android:id="@+id/cta"
     android:layout_height="wrap_content"
     android:background="?attr/colorPrimary"
     android:elevation="12dp"
