--- a/app/src/main/res/layout/include_cta_content.xml
+++ b/app/src/main/res/layout/include_cta_content.xml
@@ -18,6 +18,7 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -30,9 +31,9 @@
         android:layout_marginEnd="22dp"
         android:layout_marginBottom="16dp"
         android:importantForAccessibility="no"
-        android:src="@drawable/survey_icon"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/survey_cta_icon" />
 
     <TextView
         android:id="@+id/ctaTitle"
@@ -41,13 +42,13 @@
         android:layout_marginStart="22dp"
         android:layout_marginTop="22dp"
         android:layout_marginEnd="30dp"
-        android:text="@string/surveyBannerTitle"
         android:textColor="?attr/callToActionTitleColor"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/ctaIcon"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="@string/surveyCtaTitle" />
 
     <TextView
         android:id="@+id/ctaSubtitle"
@@ -58,11 +59,11 @@
         android:layout_marginEnd="30dp"
         android:gravity="top"
         android:lineSpacingExtra="4sp"
-        android:text="@string/surveyDescription"
         android:textColor="?attr/callToActionSubtitleColor"
         android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/ctaIcon"
-        app:layout_constraintTop_toBottomOf="@id/ctaTitle" />
+        app:layout_constraintTop_toBottomOf="@id/ctaTitle"
+        tools:text="@string/surveyCtaDescription" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
