Add instructions page

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -64,6 +64,7 @@
     <color name="powderBlue">#50bfff</color>
     <color name="powderBlue2">#b2d6f3</color>
     <color name="denimBlue">#3d5599</color>
+    <color name="warmBlue">#3f66d5</color>
     <color name="cornflowerBlue">#678fff</color>
     <color name="cornflowerDark">#5078e9</color>
     <color name="skyBlue">#42bffe</color>
