--- a/app/src/main/res/layout/activity_add_widget_instructions.xml
+++ b/app/src/main/res/layout/activity_add_widget_instructions.xml
@@ -43,7 +43,9 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:lottie_rawRes="@raw/add_widget_instructions" />
+                app:lottie_autoPlay="true"
+                app:lottie_rawRes="@raw/add_widget_instructions"
+                app:lottie_repeatMode="restart" />
 
             <androidx.constraintlayout.widget.Barrier
                 android:id="@+id/instructionsStartBarrier"
