Tweak animation, enable buttons and select theme based on widget

--- a/app/src/main/res/layout/activity_add_widget_instructions.xml
+++ b/app/src/main/res/layout/activity_add_widget_instructions.xml
@@ -44,6 +44,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:lottie_autoPlay="true"
+                app:lottie_loop="true"
                 app:lottie_rawRes="@raw/add_widget_instructions"
                 app:lottie_repeatMode="restart" />
 
