Encourage users to add widget to home screen (#416)
* Make cta layout generic and support multiple CTAs and pixels
* Update cta to new design
* Add cta landscape support
* Add widget instructions page

--- a/app/src/main/res/drawable/background_add_widget_number.xml
+++ b/app/src/main/res/drawable/background_add_widget_number.xml
@@ -1,5 +1,5 @@
-<!--
-  ~ Copyright (c) 2018 DuckDuckGo
+<?xml version="1.0" encoding="utf-8"?><!--
+  ~ Copyright (c) 2019 DuckDuckGo
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -14,10 +14,12 @@
   ~ limitations under the License.
   -->
 
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/modal_card_button_background" />
-    <stroke
-        android:width="1dp"
-        android:color="@color/modal_card_button_background" />
-    <corners android:radius="3dp" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval">
+
+    <solid android:color="@color/warmBlue" />
+
+    <size
+        android:width="18dp"
+        android:height="18dp" />
 </shape>
