--- a/app/src/main/res/layout/activity_default_browser_info.xml
+++ b/app/src/main/res/layout/activity_default_browser_info.xml
@@ -80,7 +80,7 @@
         app:layout_constraintTop_toBottomOf="@id/title" />
 
     <ImageView
-        android:id="@+id/dismissButton"
+        android:id="@+id/ctaDismissButton"
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_marginStart="14dp"
@@ -116,7 +116,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="22dp"
-        android:background="@drawable/modal_card_button_bg"
+        android:background="@drawable/button_contained_bg"
         android:text="@string/onboardingDefaultBrowserGoToSettingsAction"
         android:textColor="@color/white"
         android:textSize="@dimen/modalCardMajorButtonTextSize"
