--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -36,7 +36,8 @@
     <attr name="settingsMinorTextColor" format="color" />
     <attr name="settingsSwitchBackgroundColor" format="color" />
     <attr name="settingsDividerColor" format="color" />
-    <attr name="callToActionCloseButtonColor" format="color" />
+    <attr name="buttonOutlinedBorderColor" format="color" />
+    <attr name="buttonOutlinedTextColor" format="color" />
     <attr name="callToActionTitleColor" format="color" />
     <attr name="callToActionSubtitleColor" format="color" />
 
