--- a/app/src/main/res/drawable/ic_overflow_12dp.xml
+++ b/app/src/main/res/drawable/ic_overflow_12dp.xml
@@ -1,5 +1,5 @@
 <!--
-  ~ Copyright (c) 2018 DuckDuckGo
+  ~ Copyright (c) 2019 DuckDuckGo
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -15,11 +15,11 @@
   -->
 
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="30dp"
-    android:height="30dp"
-    android:viewportWidth="24.0"
-    android:viewportHeight="24.0">
+    android:width="12dp"
+    android:height="24dp"
+    android:viewportWidth="12"
+    android:viewportHeight="24">
     <path
         android:fillColor="?attr/toolbarIconColor"
-        android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
+        android:pathData="M6,8a2,2 0,1 1,0 -4,2 2,0 0,1 0,4zM6,14a2,2 0,1 1,0 -4,2 2,0 0,1 0,4zM6,20a2,2 0,1 1,0 -4,2 2,0 0,1 0,4z" />
 </vector>
