--- a/app/src/main/res/layout/include_add_widget_instruction_buttons.xml
+++ b/app/src/main/res/layout/include_add_widget_instruction_buttons.xml
@@ -27,7 +27,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/divider"
+        android:background="@color/slightlyTransparentDivider"
         app:layout_constraintBottom_toTopOf="@id/homeButton" />
 
     <Button
