WIP updates to feedback UI

--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -24,7 +24,11 @@
 
     <include layout="@layout/include_toolbar" />
 
-    <include layout="@layout/content_feedback" />
+    <FrameLayout
+        android:id="@+id/fragmentContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 
 </LinearLayout>
 
