--- a/app/src/main/res/drawable/ic_positive_feedback.xml
+++ b/app/src/main/res/drawable/ic_positive_feedback.xml
@@ -14,14 +14,10 @@
   ~ limitations under the License.
   -->
 
-<vector android:height="24dp" android:viewportHeight="110"
-    android:viewportWidth="110" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#000" android:fillType="evenOdd" android:pathData="M17,3L93,3A12,12 0,0 1,105 15L105,91A12,12 0,0 1,93 103L17,103A12,12 0,0 1,5 91L5,15A12,12 0,0 1,17 3z"/>
-    <path android:fillColor="#FFF" android:fillType="evenOdd"
-        android:pathData="M16.75,2.75L93.25,2.75A12,12 0,0 1,105.25 14.75L105.25,91.25A12,12 0,0 1,93.25 103.25L16.75,103.25A12,12 0,0 1,4.75 91.25L4.75,14.75A12,12 0,0 1,16.75 2.75z"
-        android:strokeColor="#E6E5E6" android:strokeWidth=".5"/>
-    <path android:fillColor="#FFB652" android:fillType="evenOdd" android:pathData="M55,53m-30,0a30,30 0,1 1,60 0a30,30 0,1 1,-60 0"/>
-    <path android:fillColor="#733321" android:fillType="evenOdd" android:pathData="M67,51c1.7,0 3,-1.3 3,-3s-1.3,-3 -3,-3 -3,1.3 -3,3 1.3,3 3,3zM43,51c1.7,0 3,-1.3 3,-3s-1.3,-3 -3,-3 -3,1.3 -3,3 1.3,3 3,3z"/>
-    <path android:fillColor="#F1A031" android:fillType="evenOdd" android:pathData="M72.4,28.6C75.9,33.5 78,39.5 78,46c0,16.6 -13.4,30 -30,30 -6.5,0 -12.5,-2.1 -17.4,-5.6C36,78 44.9,83 55,83c16.6,0 30,-13.4 30,-30 0,-10.1 -5,-19 -12.6,-24.4z"/>
-    <path android:fillColor="#733321" android:fillType="evenOdd" android:pathData="M55,69c-4.4,0 -8.5,-1.3 -11.2,-3.4 -0.9,-0.7 -1,-1.9 -0.3,-2.8 0.7,-0.9 1.9,-1 2.8,-0.3 2,1.6 5.3,2.6 8.8,2.6 3.5,0 6.7,-1 8.8,-2.6 0.9,-0.7 2.1,-0.5 2.8,0.3 0.7,0.9 0.5,2.1 -0.3,2.8 -2.9,2.1 -7,3.4 -11.4,3.4z"/>
+<vector android:height="24dp" android:viewportHeight="48"
+    android:viewportWidth="48" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FFB652" android:fillType="evenOdd" android:pathData="M24,24m-24,0a24,24 0,1 1,48 0a24,24 0,1 1,-48 0"/>
+    <path android:fillColor="#733321" android:fillType="evenOdd" android:pathData="M33.6,22.4c1.36,0 2.4,-1.04 2.4,-2.4 0,-1.36 -1.04,-2.4 -2.4,-2.4 -1.36,0 -2.4,1.04 -2.4,2.4 0,1.36 1.04,2.4 2.4,2.4zM14.4,22.4c1.36,0 2.4,-1.04 2.4,-2.4 0,-1.36 -1.04,-2.4 -2.4,-2.4 -1.36,0 -2.4,1.04 -2.4,2.4 0,1.36 1.04,2.4 2.4,2.4z"/>
+    <path android:fillColor="#F1A031" android:fillType="evenOdd" android:pathData="M37.92,4.48c2.8,3.92 4.48,8.72 4.48,13.92 0,13.28 -10.72,24 -24,24 -5.2,0 -10,-1.68 -13.92,-4.48C8.8,44 15.92,48 24,48c13.28,0 24,-10.72 24,-24 0,-8.08 -4,-15.2 -10.08,-19.52z"/>
+    <path android:fillColor="#733321" android:fillType="evenOdd" android:pathData="M24,36.8c-3.52,0 -6.8,-1.04 -8.96,-2.72 -0.72,-0.56 -0.8,-1.52 -0.24,-2.24 0.56,-0.72 1.52,-0.8 2.24,-0.24 1.6,1.28 4.24,2.08 7.04,2.08s5.36,-0.8 7.04,-2.08c0.72,-0.56 1.68,-0.4 2.24,0.24 0.56,0.72 0.4,1.68 -0.24,2.24 -2.32,1.68 -5.6,2.72 -9.12,2.72z"/>
 </vector>
