--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -237,4 +237,24 @@
         <item name="android:textColor">@color/cornflowerBlue</item>
     </style>
 
+    <style name="FeedbackFragmentStyle" >
+        <item name="android:background">@color/whiteThree</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+
+    <style name="FeedbackInputHintStyle" parent="@android:style/TextAppearance">
+        <item name="android:textColorHint">@color/cornflowerBlue</item>
+        <item name="android:textColor">@color/cornflowerBlue</item>
+    </style>
+
+    <style name="FeedbackInputBoxStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="boxStrokeColor">@color/cornflowerBlue</item>
+        <item name="boxBackgroundColor">@color/whiteFive</item>
+    </style>
+
+    <style name="Theme.Bridge" parent="Theme.MaterialComponents.Light.Bridge">
+
+    </style>
+
 </resources>
